--- a/master.lyx
+++ b/master.lyx
@@ -264,15 +264,15 @@ key "AD2014"
 
 \end_inset
 
- (nach einem ähnlichen Ergebnis für infinitäre Logik von Martin Otto in
- 1997
+ veröffentlicht (nach einem verwandten Ergebnis für infinitäre Logik und
+ unbeschränkt große Schaltkreise von Martin Otto in 1997
 \begin_inset CommandInset citation
 LatexCommand cite
 key "Otto1997"
 
 \end_inset
 
-) veröffentlicht, und bildet die Grundlage dieser Arbeit.
+), und bildet die Grundlage dieser Arbeit.
 \end_layout
 
 \begin_layout Standard
@@ -350,7 +350,7 @@ Die folgenden Paare von Anfragenklassen sind auf endlichen Strukturen äquivalen
 
 \end_deeper
 \begin_layout Standard
-Ein ähnliches Ergebnis gibt es für Schaltkreisfamilien konstanter Tiefe.
+Das obige Ergebnis wird für Schaltkreise konstanter Tiefe angepasst.
  Es wird eine Charakterisierung der 
 \begin_inset Formula $\mathrm{LOGSPACE}$
 \end_inset
@@ -15114,6 +15114,12 @@ Berechnung der Automorphismen
 \end_layout
 
 \begin_layout Lemma
+\begin_inset CommandInset label
+LatexCommand label
+name "lem:algo-orb"
+
+\end_inset
+
 (nach Lemma 26 aus 
 \begin_inset CommandInset citation
 LatexCommand cite
@@ -15838,10 +15844,6 @@ key "AD2014"
 \end_inset
 
  für Multischaltkreise an.
-\end_layout
-
-\begin_layout --Separator--
-
 \end_layout
 
 \begin_layout Definition
@@ -16745,10 +16747,11 @@ Kodierung durch Fixpunktlogik
 
 \begin_layout Standard
 Die beschriebenen Relationen 
-\begin_inset Formula $\left(\bar{\mathrm{EV}}\left(g\right)\right)_{g\in G}$
+\begin_inset Formula $\bar{\mathrm{EV}}$
 \end_inset
 
- werden nun verwendet, um die Schaltkreisfamilie auf eine
+ werden nun verwendet, um die Auswertung jedes Schaltkreises durch eine
+ Formel der Fixpunktlogik zu definieren.
 \end_layout
 
 \begin_layout Lemma
@@ -16777,7 +16780,7 @@ Sei
 \begin_inset Formula $\varphi$
 \end_inset
 
- aufbauen, so dass für 
+, so dass für 
 \begin_inset Formula $n\in\mathbb{N}$
 \end_inset
 
@@ -16805,6 +16808,18 @@ q_{\mathcal{C}_{n}}\left(\mathfrak{A}\right)=q_{\varphi}\left(\mathfrak{A}\right
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+In diesem Abschnitt wird hauptsächlich die Folgerung aus Abschnitt 4.4 von
+ 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "AD2014"
+
+\end_inset
+
+ übernommen.
 \end_layout
 
 \begin_layout Proof
@@ -16835,7 +16850,7 @@ reference "lem:algo-rigid"
 \end_inset
 
 , die auf der Struktur 
-\begin_inset Formula $\mathbf{ORD}\left(n\right)$
+\begin_inset Formula $\mathbf{ORD}\left(n\right)=\left(\left[0,n\right],\leqslant_{\left[0,n\right]}\right)$
 \end_inset
 
  ausgewertet den Schaltkreis 
@@ -16850,11 +16865,38 @@ reference "lem:algo-rigid"
 
 \end_inset
 
+Für 
+\begin_inset Formula $n<n_{0}$
+\end_inset
 
+ gibt es nur eine endliche Anzahl von festen Schaltkreisen 
+\begin_inset Formula $\mathcal{C}_{n}$
+\end_inset
+
+ endlicher Größe, mit einer endlichen Anzahl von Isomorphietypen von Strukturen
+ aus 
+\begin_inset Formula $\mathbf{FIN}^{\left(n\right)}\left(\sigma\right)$
+\end_inset
+
+.
+ Daher kann die Anfrage auf diesen Strukturen durch eine einzige 
+\begin_inset Formula $\mathrm{FO}\left[\sigma\right]$
+\end_inset
+
+-Formel definiert werden.
+ Wir befassen uns nur mit den Schaltkreisen 
+\begin_inset Formula $\left(\mathcal{C}_{n}\right)_{n\geqslant n_{0}}$
+\end_inset
+
+, so dass 
+\begin_inset Formula $\left|\mathcal{C}_{n}\right|\leqslant n^{c}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Proof
-Hierbei sei 
+Sei 
 \begin_inset Formula $f_{G}:G\rightarrow\left[1,n\right]^{c}$
 \end_inset
 
@@ -16874,16 +16916,16 @@ Hierbei sei
 \begin_inset Formula $\bar{g},\bar{h},\bar{w}\in\left[0,n\right]^{c}$
 \end_inset
 
-:
+ gilt:
 \begin_inset Formula 
 \begin{eqnarray*}
-\mathbf{ORD}\left(n\right)\models\varphi_{G}\left[\bar{g}\right] & \Leftrightarrow & f_{G}^{-1}\left(\bar{g}\right)\in G\\
-\mathbf{ORD}\left(n\right)\models\varphi_{W}\left[\bar{h}\bar{g}\bar{w}\right] & \Leftrightarrow & \mathcal{W}\left(f_{G}^{-1}\left(\bar{h}\right),f_{G}^{-1}\left(\bar{g}\right)\right)=f_{W}^{-1}\left(\bar{w}\right)\\
-\mathbf{ORD}\left(n\right)\models\varphi_{\Omega}\left[\bar{t}\bar{g}\right] & \Leftrightarrow & \Omega\left(\bar{t}\right)=f_{G}^{-1}\left(\bar{g}\right)\\
+\mathbf{ORD}\left(n\right)\models\varphi_{G}\left[\bar{g}\right] & \Leftrightarrow & f_{G}^{-1}\bar{g}\in G\\
+\mathbf{ORD}\left(n\right)\models\varphi_{W}\left[\bar{h}\bar{g}\bar{w}\right] & \Leftrightarrow & \mathcal{W}\left(f_{G}^{-1}\bar{h},f_{G}^{-1}\bar{g}\right)=f_{W}^{-1}\bar{w}\\
+\mathbf{ORD}\left(n\right)\models\varphi_{\Omega}\left[\bar{t}\bar{g}\right] & \Leftrightarrow & \Omega\bar{t}=f_{G}^{-1}\bar{g}\\
  &  & \mathrm{für}\,\bar{t}\in\left[1,n\right]^{k}\\
-\mathbf{ORD}\left(n\right)\models\varphi_{\phi}\left[\bar{g}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\left(\bar{g}\right)\right)=\phi\\
+\mathbf{ORD}\left(n\right)\models\varphi_{\phi}\left[\bar{g}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\bar{g}\right)=\phi\\
  &  & \mathrm{für}\,\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\mathtt{NOT}\right\} \\
-\mathbf{ORD}\left(n\right)\models\varphi_{R}\left[\bar{g}\bar{x}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\left(\bar{g}\right)\right)=R\bar{x}\\
+\mathbf{ORD}\left(n\right)\models\varphi_{R}\left[\bar{g}\bar{x}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\bar{g}\right)=R\bar{x}\\
  &  & \mathrm{für}\,R/m\in\sigma,\,\bar{x}\in\left[1,n\right]^{m}
 \end{eqnarray*}
 
@@ -16893,48 +16935,180 @@ Hierbei sei
 \end_layout
 
 \begin_layout Proof
-Für 
-\begin_inset Formula $n<n_{0}$
+Per Korollar 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "cor:korollar-23"
+
 \end_inset
 
- gibt es nur eine endliche Anzahl von festen Schaltkreisen 
-\begin_inset Formula $\mathcal{C}_{n}$
-\end_inset
-
-.
- Jeder dieser Schaltkreise ist durch eine 
-\begin_inset Formula $\mathrm{FO}\left[\sigma\right]$
-\end_inset
-
--Formel kodierbar: Sei 
-\begin_inset Formula $\psi_{n}\left(\bar{x}\right)$
-\end_inset
-
- eine Formel, die prüft, ob 
-\begin_inset Formula $\left|A\right|=n$
-\end_inset
-
-, und dann prüft, ob für alle 
-\begin_inset Formula $n!$
-\end_inset
-
- Bijektionen 
-\begin_inset Formula $\pi:A\rightarrow U$
-\end_inset
-
- gilt, dass 
-\begin_inset Formula $\mathcal{C}\left[\pi\mathfrak{A}\right]\left(\Omega\left(\pi\beta\bar{x}\right)\right)$
-\end_inset
-
- mit 
-\begin_inset Formula $\beta:\mathrm{frei}\left(\psi_{n}\right)\rightarrow A$
+ ist 
+\begin_inset Formula $\left|\mathrm{sp}\left(g\right)\right|\leqslant\mathrm{sp}\left(\mathcal{C}_{n}\right)=d$
 \end_inset
 
 .
+ Wir füllen alle Relationen 
+\begin_inset Formula $\bar{\mathrm{EV}}\left(g\right)$
+\end_inset
+
+ auf eine einheitliche Länge 
+\begin_inset Formula $d$
+\end_inset
+
+ auf:
+\begin_inset Formula 
+\[
+\overline{\mathrm{EV}}\left(g\right)\coloneqq\left\{ \bar{a}\in A^{d}\mid\left(a_{1},\cdots,a_{\left|\mathrm{sp}\left(g\right)\right|}\right)\in\bar{\mathrm{EV}}\left(g\right),\,a_{i}\neq a_{j}\,\,\mathrm{f.a.}\,\,1\leqslant i<j\leqslant d\right\} 
+\]
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Proof
-[...]
+Nun definieren wir die Relation 
+\begin_inset Formula $\mathrm{EVAL}\subseteq\left[0,n\right]^{c}\times A^{d}$
+\end_inset
+
+, so dass 
+\begin_inset Formula $\bar{g}\bar{a}\in\mathrm{EVAL}$
+\end_inset
+
+ genau dann 
+\begin_inset Formula $\bar{g}=f_{G}g$
+\end_inset
+
+ und 
+\begin_inset Formula $\bar{a}\in\overline{\mathrm{EV}}\left(g\right)$
+\end_inset
+
+, beziehungsweise 
+\begin_inset Formula $\left(a_{1},\cdots,a_{\left|\mathrm{sp}\left(g\right)\right|}\right)\in\bar{\mathrm{EV}}\left(g\right)$
+\end_inset
+
+.
+\begin_inset Formula 
+\[
+\mathrm{EVAL}\coloneqq\left\{ \left(f_{G}g\right)\bar{a}\mid g\in G,\,\bar{a}\in\overline{\mathrm{EV}}\left(g\right)\right\} 
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Proof
+Nach Lemma 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "lem:algo-orb"
+
+\end_inset
+
+ ist die Bestimmung der Trägermengen 
+\begin_inset Formula $\mathrm{sp}\left(g\right)$
+\end_inset
+
+ und Orbits in 
+\begin_inset Formula $P$
+\end_inset
+
+.
+ Daher existiert eine 
+\begin_inset Formula $\mathrm{LFP}\left[\left\{ \leqslant\right\} \right]$
+\end_inset
+
+-Formel 
+\begin_inset Formula $\varphi_{\mathrm{sp}}$
+\end_inset
+
+, so dass gilt:
+\begin_inset Formula 
+\begin{eqnarray*}
+\mathbf{ORD}\left(n\right)\models\varphi_{\mathrm{sp}}\left(\bar{g}u\right) & \Leftrightarrow & \mathbf{ORD}\left(n\right)\models\varphi_{G}\left[\bar{g}\right]\,\mathrm{und}\,u\in\mathrm{sp}\left(g\right)\\
+ &  & \mathrm{f.a.}\,\bar{g}u\in\left[1,n\right]^{c+1}
+\end{eqnarray*}
+
+\end_inset
+
+Ferner definieren wir die Ordnung der Elemente 
+\begin_inset Formula $\bar{\mathrm{sp}}\left(g\right)$
+\end_inset
+
+ mit den folgenden Formeln:
+\begin_inset Formula 
+\begin{eqnarray*}
+\varphi_{\mathrm{sp},1}\left(\bar{x}y\right) & \coloneqq & \varphi_{\mathrm{sp}}\left(\bar{x}y\right)\wedge\forall z\left(\varphi_{\mathrm{sp}}\left(\bar{x}z\right)\rightarrow y\leqslant z\right)\\
+\varphi_{\mathrm{sp},i+1}\left(\bar{x}y\right) & \coloneqq & \varphi_{\mathrm{sp}}\left(\bar{x}y\right)\wedge\exists z\left(\neg\left(\varphi_{\mathrm{sp},i}\left(\bar{x}z\right)\rightarrow y\leqslant z\right)\wedge\forall z'\left(\varphi_{\mathrm{sp}}\left(\bar{x}z'\right)\rightarrow\left(z'\leqslant z\vee y\leqslant z'\right)\right)\right)
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Proof
+Für die Konsistenz von zwei Belegungen 
+\begin_inset Formula $\pi_{1}\coloneqq\left(\bar{\mathrm{sp}}\left(g\right)\mapsto\bar{a}\right)$
+\end_inset
+
+ und 
+\begin_inset Formula $\pi_{2}\coloneqq\left(\bar{\mathrm{sp}}\left(h\right)\mapsto\bar{b}\right)$
+\end_inset
+
+ definieren wir die folgende 
+\begin_inset Formula $\mathrm{LFP}+\mathbf{ORD}$
+\end_inset
+
+-Formel, die für 
+\begin_inset Formula $\beta\left(\bar{u}\bar{v}\bar{x}\bar{y}\right)$
+\end_inset
+
+ entscheidet, ob für die Abbildungen 
+\begin_inset Formula $\pi_{1}\coloneqq\left(\bar{\mathrm{sp}}\left(f_{G}^{-1}\beta\bar{u}\right)\mapsto\beta\bar{x}\right)$
+\end_inset
+
+ und 
+\begin_inset Formula $\pi_{2}\coloneqq\left(\bar{\mathrm{sp}}\left(f_{G}^{-1}\beta\bar{v}\right)\mapsto\beta\bar{y}\right)$
+\end_inset
+
+ gilt, dass 
+\begin_inset Formula $\pi_{1}\sim_{\mathrm{sp}\left(g\right)\cap\mathrm{sp}\left(h\right)}\pi_{2}$
+\end_inset
+
+.
+ 
+\begin_inset Formula 
+\begin{eqnarray*}
+\varphi_{\sim}\left(\bar{u}\bar{v}\bar{x}\bar{y}\right) & \coloneqq & \bigwedge_{i,j\in\left[1,k\right]}\forall w\left(\left(\varphi_{\mathrm{sp},i}\left(\bar{u}w\right)\wedge\varphi_{\mathrm{sp},j}\left(\bar{v}w\right)\right)\rightarrow x_{i}=y_{j}\right)\\
+ &  & \wedge\bigwedge_{i,j\in\left[1,k\right]}\forall w_{1}\forall w_{2}\left(\left(\varphi_{\mathrm{sp},i}\left(\bar{u}w_{1}\right)\wedge\varphi_{\mathrm{sp},j}\left(\bar{v}w_{2}\right)\wedge x_{i}=y_{j}\right)\rightarrow w_{1}=w_{2}\right)
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Proof
+Zuletzt konstruieren wir die 
+\begin_inset Formula $\mathrm{LFP}+\mathbf{ORD}\left[\sigma\right]$
+\end_inset
+
+-Formeln, die die Relation 
+\begin_inset Formula $\mathrm{EVAL}$
+\end_inset
+
+ rekursiv definieren.
+\begin_inset Formula 
+\begin{eqnarray*}
+\psi_{\mathbf{0}}\left(\bar{u}\bar{x}\right) & \coloneqq & \neg x_{1}=x_{1}\\
+\psi_{\mathbf{1}}\left(\bar{u}\bar{x}\right) & \coloneqq
+\end{eqnarray*}
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
