--- a/master.tex
+++ b/master.tex
@@ -183,9 +183,9 @@ Konkret ist die Klasse der symmetrischen $P$-uniformen booleschen
 Schaltkreisfamilien $\mathrm{SBC}^{P}$ äquivalent zu der Logik erster
 Stufe mit Fixpunkt-Operator und disjunktem Ordnungsprädikat $\mathrm{FP}+\mathbf{ORD}$.
 Das Ergebnis wurde 2014 von Matthew Anderson und Anuj Dawar\cite{AD2014}
-(nach einem ähnlichen Ergebnis für infinitäre Logik von Martin Otto
-in 1997\cite{Otto1997}) veröffentlicht, und bildet die Grundlage
-dieser Arbeit.
+veröffentlicht (nach einem verwandten Ergebnis für infinitäre Logik
+und unbeschränkt große Schaltkreise von Martin Otto in 1997\cite{Otto1997}),
+und bildet die Grundlage dieser Arbeit.
 
 Die logische Zählerweiterung $\mathrm{FP}+C$ charakterisiert die
 Schaltkreisklasse $\left(\mathrm{SBC}+\mathbf{MAJ}\right)^{P}$ mit
@@ -204,8 +204,8 @@ Die folgenden Paare von Anfragenklassen sind auf endlichen Strukturen
 \item $\mathrm{FP}+\mathbf{ARB}$ und $\mathrm{SBC}^{P/\mathrm{poly}}$
 \end{enumerate}
 \end{thm}
-Ein ähnliches Ergebnis gibt es für Schaltkreisfamilien konstanter
-Tiefe. Es wird eine Charakterisierung der $\mathrm{LOGSPACE}$-uniformen
+Das obige Ergebnis wird für Schaltkreise konstanter Tiefe angepasst.
+Es wird eine Charakterisierung der $\mathrm{LOGSPACE}$-uniformen
 symmetrischen $\mathrm{AC}^{0}$-Schaltkreisfamilien ($\left(\mathrm{SAC}^{0}\right)^{\mathrm{LOGSPACE}}$)
 durch die Logik $\mathrm{FO}+\mathbf{BIT}$ mit disjunktem $\mathtt{BIT}$-Prädikat
 nachgewiesen.
@@ -3829,7 +3829,7 @@ $\textsc{True}$
 \end{algorithm}
 \end{proof}
 \begin{lem}
-(nach Lemma 26 aus \cite{AD2014})
+\label{lem:algo-orb}(nach Lemma 26 aus \cite{AD2014})
 
 Es existiert ein deterministischer Algorithmus, der bei Eingabe eines
 rigiden $\left(\sigma,\mathbb{B}\right)$-Multischaltkreises $\mathcal{C}=\left(G,\mathcal{W},\Sigma,\Omega,U\right)$
@@ -3989,8 +3989,6 @@ Elemente $U\backslash\mathrm{sp}\left(g\right)$ ist für $g$ unbedeutend.
 
 Die Folgerung in diesem Abschnitt passt den Abschnitt 4.3 aus \cite{AD2014}
 für Multischaltkreise an.
-
-
 \begin{defn}
 \textbf{Konsistenz}
 
@@ -4236,55 +4234,109 @@ q_{\mathcal{C}}\left(\mathfrak{A}\right)\coloneqq\left\{ \bar{a}\in A^{k}\mid\ma
 
 \section{Kodierung durch Fixpunktlogik}
 
-Die beschriebenen Relationen $\left(\bar{\mathrm{EV}}\left(g\right)\right)_{g\in G}$
-werden nun verwendet, um die Schaltkreisfamilie auf eine
+Die beschriebenen Relationen $\bar{\mathrm{EV}}$ werden nun verwendet,
+um die Auswertung jedes Schaltkreises durch eine Formel der Fixpunktlogik
+zu definieren.
 \begin{lem}
 Sei $\left(\mathcal{C}_{n}\right)_{n\in\mathbb{N}}$ eine $k$-stellige,
 rigide, symmetrische, $P$-uniforme $\left(\sigma,\mathbb{B}_{\mathrm{std}}\right)$-Multischaltkreisfamilie.
 Es existiert eine $\left(\mathrm{LFP}+\mathbf{ORD}\right)\left[\sigma\right]$-Formel
-$\varphi$ aufbauen, so dass für $n\in\mathbb{N}$ und $\mathfrak{A}\in\mathbf{FIN}^{\left(n\right)}\left(\sigma\right)$
+$\varphi$, so dass für $n\in\mathbb{N}$ und $\mathfrak{A}\in\mathbf{FIN}^{\left(n\right)}\left(\sigma\right)$
 die Formel $\varphi\left(\bar{x}\right)$ die gleiche Anfrage definiert
 wie $\mathcal{C}_{n}$:
 
 \[
 q_{\mathcal{C}_{n}}\left(\mathfrak{A}\right)=q_{\varphi}\left(\mathfrak{A}\right)
 \]
+
 \end{lem}
+In diesem Abschnitt wird hauptsächlich die Folgerung aus Abschnitt
+4.4 von \cite{AD2014} übernommen.
 \begin{proof}
 Da die Schaltkreisfamilie von einer $P$-Turingmaschine berechnet
 wird, existiert nach dem Immerman-Vardi-Theorem\cite{Vardi:1982:CRQ:800070.802186,IMMERMAN198686}
 und Lemma \ref{lem:algo-rigid} eine Sammlung von $\mathrm{LFP}\left[\left\{ \leqslant\right\} \right]$-Formeln
-$\Phi$, die auf der Struktur $\mathbf{ORD}\left(n\right)$ ausgewertet
-den Schaltkreis $\mathcal{C}_{n}$ beschreiben:
+$\Phi$, die auf der Struktur $\mathbf{ORD}\left(n\right)=\left(\left[0,n\right],\leqslant_{\left[0,n\right]}\right)$
+ausgewertet den Schaltkreis $\mathcal{C}_{n}$ beschreiben:
 \[
 \Phi\coloneqq\left(\varphi_{G},\varphi_{\mathcal{W}},\varphi_{\Omega},\left(\varphi_{\phi}\right)_{\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\mathtt{NOT}\right\} },\left(\varphi_{R}\right)_{R\in\sigma}\right)
 \]
+Für $n<n_{0}$ gibt es nur eine endliche Anzahl von festen Schaltkreisen
+$\mathcal{C}_{n}$ endlicher Größe, mit einer endlichen Anzahl von
+Isomorphietypen von Strukturen aus $\mathbf{FIN}^{\left(n\right)}\left(\sigma\right)$.
+Daher kann die Anfrage auf diesen Strukturen durch eine einzige $\mathrm{FO}\left[\sigma\right]$-Formel
+definiert werden. Wir befassen uns nur mit den Schaltkreisen $\left(\mathcal{C}_{n}\right)_{n\geqslant n_{0}}$,
+so dass $\left|\mathcal{C}_{n}\right|\leqslant n^{c}$.
 
-
-Hierbei sei $f_{G}:G\rightarrow\left[1,n\right]^{c}$ eine geeignete
-Kodierung der höchstens $n^{c}$ Gates von $\mathcal{C}_{n}$, und
-$f_{W}:\left[1,n^{c}\right]\rightarrow\left[1,n\right]^{c}$ eine
-Kodierung von Zahlen, so dass für $\bar{g},\bar{h},\bar{w}\in\left[0,n\right]^{c}$:
+Sei $f_{G}:G\rightarrow\left[1,n\right]^{c}$ eine geeignete Kodierung
+der höchstens $n^{c}$ Gates von $\mathcal{C}_{n}$, und $f_{W}:\left[1,n^{c}\right]\rightarrow\left[1,n\right]^{c}$
+eine Kodierung von Zahlen, so dass für $\bar{g},\bar{h},\bar{w}\in\left[0,n\right]^{c}$
+gilt:
 \begin{eqnarray*}
-\mathbf{ORD}\left(n\right)\models\varphi_{G}\left[\bar{g}\right] & \Leftrightarrow & f_{G}^{-1}\left(\bar{g}\right)\in G\\
-\mathbf{ORD}\left(n\right)\models\varphi_{W}\left[\bar{h}\bar{g}\bar{w}\right] & \Leftrightarrow & \mathcal{W}\left(f_{G}^{-1}\left(\bar{h}\right),f_{G}^{-1}\left(\bar{g}\right)\right)=f_{W}^{-1}\left(\bar{w}\right)\\
-\mathbf{ORD}\left(n\right)\models\varphi_{\Omega}\left[\bar{t}\bar{g}\right] & \Leftrightarrow & \Omega\left(\bar{t}\right)=f_{G}^{-1}\left(\bar{g}\right)\\
+\mathbf{ORD}\left(n\right)\models\varphi_{G}\left[\bar{g}\right] & \Leftrightarrow & f_{G}^{-1}\bar{g}\in G\\
+\mathbf{ORD}\left(n\right)\models\varphi_{W}\left[\bar{h}\bar{g}\bar{w}\right] & \Leftrightarrow & \mathcal{W}\left(f_{G}^{-1}\bar{h},f_{G}^{-1}\bar{g}\right)=f_{W}^{-1}\bar{w}\\
+\mathbf{ORD}\left(n\right)\models\varphi_{\Omega}\left[\bar{t}\bar{g}\right] & \Leftrightarrow & \Omega\bar{t}=f_{G}^{-1}\bar{g}\\
  &  & \mathrm{f\ddot{u}r}\,\bar{t}\in\left[1,n\right]^{k}\\
-\mathbf{ORD}\left(n\right)\models\varphi_{\phi}\left[\bar{g}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\left(\bar{g}\right)\right)=\phi\\
+\mathbf{ORD}\left(n\right)\models\varphi_{\phi}\left[\bar{g}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\bar{g}\right)=\phi\\
  &  & \mathrm{f\ddot{u}r}\,\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\mathtt{NOT}\right\} \\
-\mathbf{ORD}\left(n\right)\models\varphi_{R}\left[\bar{g}\bar{x}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\left(\bar{g}\right)\right)=R\bar{x}\\
+\mathbf{ORD}\left(n\right)\models\varphi_{R}\left[\bar{g}\bar{x}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\bar{g}\right)=R\bar{x}\\
  &  & \mathrm{f\ddot{u}r}\,R/m\in\sigma,\,\bar{x}\in\left[1,n\right]^{m}
 \end{eqnarray*}
 
 
-Für $n<n_{0}$ gibt es nur eine endliche Anzahl von festen Schaltkreisen
-$\mathcal{C}_{n}$. Jeder dieser Schaltkreise ist durch eine $\mathrm{FO}\left[\sigma\right]$-Formel
-kodierbar: Sei $\psi_{n}\left(\bar{x}\right)$ eine Formel, die prüft,
-ob $\left|A\right|=n$, und dann prüft, ob für alle $n!$ Bijektionen
-$\pi:A\rightarrow U$ gilt, dass $\mathcal{C}\left[\pi\mathfrak{A}\right]\left(\Omega\left(\pi\beta\bar{x}\right)\right)$
-mit $\beta:\mathrm{frei}\left(\psi_{n}\right)\rightarrow A$.
+Per Korollar \ref{cor:korollar-23} ist $\left|\mathrm{sp}\left(g\right)\right|\leqslant\mathrm{sp}\left(\mathcal{C}_{n}\right)=d$.
+Wir füllen alle Relationen $\bar{\mathrm{EV}}\left(g\right)$ auf
+eine einheitliche Länge $d$ auf:
+\[
+\overline{\mathrm{EV}}\left(g\right)\coloneqq\left\{ \bar{a}\in A^{d}\mid\left(a_{1},\cdots,a_{\left|\mathrm{sp}\left(g\right)\right|}\right)\in\bar{\mathrm{EV}}\left(g\right),\,a_{i}\neq a_{j}\,\,\mathrm{f.a.}\,\,1\leqslant i<j\leqslant d\right\} 
+\]
 
-{[}...{]}
+
+Nun definieren wir die Relation $\mathrm{EVAL}\subseteq\left[0,n\right]^{c}\times A^{d}$,
+so dass $\bar{g}\bar{a}\in\mathrm{EVAL}$ genau dann $\bar{g}=f_{G}g$
+und $\bar{a}\in\overline{\mathrm{EV}}\left(g\right)$, beziehungsweise
+$\left(a_{1},\cdots,a_{\left|\mathrm{sp}\left(g\right)\right|}\right)\in\bar{\mathrm{EV}}\left(g\right)$.
+\[
+\mathrm{EVAL}\coloneqq\left\{ \left(f_{G}g\right)\bar{a}\mid g\in G,\,\bar{a}\in\overline{\mathrm{EV}}\left(g\right)\right\} 
+\]
+
+
+Nach Lemma \ref{lem:algo-orb} ist die Bestimmung der Trägermengen
+$\mathrm{sp}\left(g\right)$ und Orbits in $P$. Daher existiert eine
+$\mathrm{LFP}\left[\left\{ \leqslant\right\} \right]$-Formel $\varphi_{\mathrm{sp}}$,
+so dass gilt:
+\begin{eqnarray*}
+\mathbf{ORD}\left(n\right)\models\varphi_{\mathrm{sp}}\left(\bar{g}u\right) & \Leftrightarrow & \mathbf{ORD}\left(n\right)\models\varphi_{G}\left[\bar{g}\right]\,\mathrm{und}\,u\in\mathrm{sp}\left(g\right)\\
+ &  & \mathrm{f.a.}\,\bar{g}u\in\left[1,n\right]^{c+1}
+\end{eqnarray*}
+Ferner definieren wir die Ordnung der Elemente $\bar{\mathrm{sp}}\left(g\right)$
+mit den folgenden Formeln:
+\begin{eqnarray*}
+\varphi_{\mathrm{sp},1}\left(\bar{x}y\right) & \coloneqq & \varphi_{\mathrm{sp}}\left(\bar{x}y\right)\wedge\forall z\left(\varphi_{\mathrm{sp}}\left(\bar{x}z\right)\rightarrow y\leqslant z\right)\\
+\varphi_{\mathrm{sp},i+1}\left(\bar{x}y\right) & \coloneqq & \varphi_{\mathrm{sp}}\left(\bar{x}y\right)\wedge\exists z\left(\neg\left(\varphi_{\mathrm{sp},i}\left(\bar{x}z\right)\rightarrow y\leqslant z\right)\wedge\forall z'\left(\varphi_{\mathrm{sp}}\left(\bar{x}z'\right)\rightarrow\left(z'\leqslant z\vee y\leqslant z'\right)\right)\right)
+\end{eqnarray*}
+
+
+Für die Konsistenz von zwei Belegungen $\pi_{1}\coloneqq\left(\bar{\mathrm{sp}}\left(g\right)\mapsto\bar{a}\right)$
+und $\pi_{2}\coloneqq\left(\bar{\mathrm{sp}}\left(h\right)\mapsto\bar{b}\right)$
+definieren wir die folgende $\mathrm{LFP}+\mathbf{ORD}$-Formel, die
+für $\beta\left(\bar{u}\bar{v}\bar{x}\bar{y}\right)$ entscheidet,
+ob für die Abbildungen $\pi_{1}\coloneqq\left(\bar{\mathrm{sp}}\left(f_{G}^{-1}\beta\bar{u}\right)\mapsto\beta\bar{x}\right)$
+und $\pi_{2}\coloneqq\left(\bar{\mathrm{sp}}\left(f_{G}^{-1}\beta\bar{v}\right)\mapsto\beta\bar{y}\right)$
+gilt, dass $\pi_{1}\sim_{\mathrm{sp}\left(g\right)\cap\mathrm{sp}\left(h\right)}\pi_{2}$.
+\begin{eqnarray*}
+\varphi_{\sim}\left(\bar{u}\bar{v}\bar{x}\bar{y}\right) & \coloneqq & \bigwedge_{i,j\in\left[1,k\right]}\forall w\left(\left(\varphi_{\mathrm{sp},i}\left(\bar{u}w\right)\wedge\varphi_{\mathrm{sp},j}\left(\bar{v}w\right)\right)\rightarrow x_{i}=y_{j}\right)\\
+ &  & \wedge\bigwedge_{i,j\in\left[1,k\right]}\forall w_{1}\forall w_{2}\left(\left(\varphi_{\mathrm{sp},i}\left(\bar{u}w_{1}\right)\wedge\varphi_{\mathrm{sp},j}\left(\bar{v}w_{2}\right)\wedge x_{i}=y_{j}\right)\rightarrow w_{1}=w_{2}\right)
+\end{eqnarray*}
+
+
+Zuletzt konstruieren wir die $\mathrm{LFP}+\mathbf{ORD}\left[\sigma\right]$-Formeln,
+die die Relation $\mathrm{EVAL}$ rekursiv definieren.
+\begin{eqnarray*}
+\psi_{\mathbf{0}}\left(\bar{u}\bar{x}\right) & \coloneqq & \neg x_{1}=x_{1}\\
+\psi_{\mathbf{1}}\left(\bar{u}\bar{x}\right) & \coloneqq
+\end{eqnarray*}
+
 \end{proof}
 \pagebreak{}
 
